--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/> -->
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
@@ -194,7 +192,7 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163338/zhuraki/main%20page%20gallery/1_mob_1x-min_v9fn8j.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163339/zhuraki/main%20page%20gallery/1_mob_2x-min_ng7tac.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163338/zhuraki/main%20page%20gallery/1_mob_1x-min_v9fn8j.jpg" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163338/zhuraki/main%20page%20gallery/1_mob_1x-min_v9fn8j.jpg" alt="modern room"/>
       </picture>
 </div>
 
@@ -209,7 +207,7 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163339/zhuraki/main%20page%20gallery/2_mob_2x-min_hogiij.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163339/zhuraki/main%20page%20gallery/2_mob_1x-min_mxqoae.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163339/zhuraki/main%20page%20gallery/2_mob_2x-min_hogiij.jpg" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163339/zhuraki/main%20page%20gallery/2_mob_2x-min_hogiij.jpg" alt="modern room"/>
   </picture>
 </div>
 
@@ -224,7 +222,7 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163341/zhuraki/main%20page%20gallery/3_mob_1x-min_i7mswa.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163342/zhuraki/main%20page%20gallery/3_mob_2x-min_er3dyv.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163341/zhuraki/main%20page%20gallery/3_mob_1x-min_i7mswa.jpg" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163341/zhuraki/main%20page%20gallery/3_mob_1x-min_i7mswa.jpg" alt="modern room"/>
   </picture>
 </div>
 
@@ -239,7 +237,7 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163344/zhuraki/main%20page%20gallery/4_mob_1x-min_mdsucg.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163344/zhuraki/main%20page%20gallery/4_mob_2x-min_yk3ue2.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163344/zhuraki/main%20page%20gallery/4_mob_1x-min_mdsucg.jpg" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163344/zhuraki/main%20page%20gallery/4_mob_1x-min_mdsucg.jpg" alt="modern room"/>
   </picture>
 </div>
 
@@ -254,7 +252,7 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165931/zhuraki/main%20page%20gallery/5_mob_1x-min_gpu9sg.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165932/zhuraki/main%20page%20gallery/5_mob_2x-min_hmmr2u.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165931/zhuraki/main%20page%20gallery/5_mob_1x-min_gpu9sg.jpg" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165931/zhuraki/main%20page%20gallery/5_mob_1x-min_gpu9sg.jpg" alt="modern room"/>
   </picture>
 </div>
 
@@ -269,7 +267,7 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165932/zhuraki/main%20page%20gallery/6_mob_1x-min_nhgcwu.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165935/zhuraki/main%20page%20gallery/6_mob_2x-min_nqpvp8.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165932/zhuraki/main%20page%20gallery/6_mob_1x-min_nhgcwu.jpg" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748165932/zhuraki/main%20page%20gallery/6_mob_1x-min_nhgcwu.jpg" alt="modern room"/>
   </picture>
 </div>
 
@@ -284,21 +282,83 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163351/zhuraki/main%20page%20gallery/7_mob_1x-min_r8is60.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163351/zhuraki/main%20page%20gallery/7_mob_2x-min_yo7dy5.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163351/zhuraki/main%20page%20gallery/7_mob_1x-min_r8is60.jpg" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163351/zhuraki/main%20page%20gallery/7_mob_1x-min_r8is60.jpg" alt="modern room"/>
   </picture>
 </div>
 
  </div>
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
+  <div class=" custom__next">
+    <img src="./images/arrow-next.svg" alt="arrow-next" width="24" height="24">
+  </div>
+  <div class=" custom__prev">
+    <img src="./images/arrow-prew.svg" alt="arrow-prev" width="24" height="24">
+  </div>
+</div>
+
+<div class="swiper mySwiperThumbs">
+  <div class="swiper-wrapper ">
+    <div class="swiper-slide ">
+      <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163338/zhuraki/main%20page%20gallery/1_desk_1x-min_rywcdb.jpg 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198364/zhuraki/swiper%20mini%20foto/1_2x_ovhiob.jpg 2x" 
+              />
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/1_qeczdi.jpg" alt="modern room" />
+      </picture>
+    </div>
+    <div class="swiper-slide ">
+      <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/2_qyievv.jpg 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198365/zhuraki/swiper%20mini%20foto/2_2x_mtlgde.jpg 2x" 
+              />
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/2_qyievv.jpg" alt="tv place"  "/>
+      </picture>
+    </div>
+    <div class="swiper-slide ">
+      <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/3_pog81z.jpg 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198365/zhuraki/swiper%20mini%20foto/3_2x_d0ifpq.jpg 2x" 
+              />
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/3_pog81z.jpg" alt="fireplace"  />
+      </picture>
+    </div>
+    <div class="swiper-slide ">
+      <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/4_qp54es.jpg 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198365/zhuraki/swiper%20mini%20foto/4_2x_mfoxpc.jpg 2x" 
+              />
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/4_qp54es.jpg" alt="kitchen"  />
+      </picture>
+    </div>
+    <div class="swiper-slide">
+       <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/5_pfyyry.jpg 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198365/zhuraki/swiper%20mini%20foto/5_2x_plr9lw.jpg 2x" 
+              />
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/5_pfyyry.jpg" alt="bathroom"   />
+      </picture>
+    </div>
+    <div class="swiper-slide ">
+       <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/6_ow3kly.jpg 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198366/zhuraki/swiper%20mini%20foto/6_2x_s3ncn8.jpg 2x"/>
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/6_ow3kly.jpg" alt="bathroom" />
+      </picture>
+    </div>
+    <div class="swiper-slide ">
+      <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/7_zos5qx.jpg 1x,
+               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198367/zhuraki/swiper%20mini%20foto/7_2x_xlccau.jpg 2x"/>
+              <img src="hhttps://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/7_zos5qx.jpg" alt="decorated walls" />
+      </picture>
+    </div>
+
+  </div>
 </div>
 </section>
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script type="module" src="./js/swiper.js"></script>
-<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
 <script type="module" src="./js/slick.js"></script>
 </body>
 </html>
