--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
       <img src="./images/point.svg" alt="point" width="24" height="24">
       <p class="text__link ">Basement Remodeling</p>
   </div>
+
+  <form id="reviewForm" class="form picture__form">
+          <h2 class="solve__text pure-white ">Get a Free Quote</h2>
+          <div class="form__container">
+            <input type="text" id="name" placeholder="Your name" required  class="input form__text"/>
+            <input type="text" id="city" placeholder="City" required  class="input form__text"/>
+            <textarea id="review" placeholder="Your review" required class="textarea form__text"></textarea>
+          </div>
+
+        <button type="submit" class=" text__link button ">Submit</button>
+        </form>
 </section>
 
 <section class="container__gray section__help">
