adaptived review form

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
 <div class="backdrop is-hidden">
      <div class="modal">
-      <div class="modal__container">
+      <!-- <div class="modal__container"> -->
 
         <button class="button__close modal-close">
           <img src="./images/close.svg" alt="icon for close" width="24" height="24" class="form__svg">
@@ -409,7 +409,7 @@
           <div class="form__container">
             <input type="text" id="name" placeholder="Your name" required  class="input form__text"/>
             <input type="text" id="city" placeholder="City" required  class="input form__text"/>
-            <textarea id="review" placeholder="Your review"  maxlength="375" required class="textarea form__text"></textarea>
+            <textarea id="review" placeholder="Your review"  maxlength="375" required class="textarea testimonials__textarea form__text"></textarea>
           </div>
 
         <button type="submit" class=" text__link button ">Submit</button>
@@ -417,7 +417,7 @@
 
         <div id="status"></div>
       </div>
-     </div>
+     <!-- </div> -->
   </div>
 
 
