update settings for swiper testimonials

--- a/index.html
+++ b/index.html
@@ -398,11 +398,12 @@
 
 <div class="backdrop is-hidden">
      <div class="modal">
-      <!-- <div class="modal__container"> -->
 
         <button class="button__close modal-close">
-          <img src="./images/close.svg" alt="icon for close" width="24" height="24" class="form__svg">
-         </button>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6" width="24" height="24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+          </svg>
+        </button>
 
         <form id="reviewForm" class="form">
           <h2 class="solve__text pure-white ">Leave review</h2>
@@ -417,13 +418,11 @@
 
         <div id="status"></div>
       </div>
-     <!-- </div> -->
   </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script type="module" src="./js/swiper.js"></script>
-<!-- <script type="module" src="./js/slick.js"></script> -->
 <script type="module" src="./js/settingsFB.js"></script>
 <script type="module" src="./js/review-modal.js"></script>
 </body>
