--- a/index.html
+++ b/index.html
@@ -512,17 +512,17 @@
      <div class="modal">
 
         <button class="button__close modal-close">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6" width="24" height="24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-          </svg>
+          <img src="./images/close.svg" alt="icon close" width="24" height="24">
         </button>
 
         <form id="reviewForm" class="form">
-          <h2 class="solve__text pure-white ">Leave review</h2>
+          <h2 class="solve__text black">Leave review</h2>
           <div class="form__container">
+            <img src="./images/user_black.svg" alt="icon user black" class="icon__user-black">
             <input type="text" id="name" placeholder="Your name" required  class="input form__text"/>
-            <input type="text" id="city" placeholder="City" required  class="input form__text"/>
-            <textarea id="review" placeholder="Your review"  maxlength="375" required class="textarea testimonials__textarea form__text"></textarea>
+            <img src="./images/location.svg" alt="icon location" class="icon__location">
+            <input type="text" id="city" placeholder="Your city" required  class="input form__text"/>
+            <textarea id="review" placeholder="Write your review"  maxlength="375" required class="textarea testimonials__textarea form__text"></textarea>
           </div>
 
         <button type="submit" class=" text__link button ">Submit</button>
