--- a/index.html
+++ b/index.html
@@ -535,8 +535,42 @@
         </form>
 </section>
 
-<footer class="footer__container">
-   
+<footer class="container__gray footer__container">
+  <div class="footer__container__first">
+    <div class="footer__container__second">
+      <div class="footer__text-container">
+        <h3 class="footer__subtitle">Discuss the project:</h3>
+        <article class="footer__article">312-536-1007</article>
+      </div>
+      <div class="footer__text-container">
+        <h3 class="footer__subtitle">our location</h3>
+        <article class="footer__article">4935 N Menard Ave</article>
+      </div>
+    </div>
+    
+    <div class="footer__follower__container">
+     <h3 class="footer__subtitle">Follow:</h3>
+     <a href="" class="link footer__instagram">INSTAGRAM</a>
+    </div>
+
+  </div>
+  <div>
+    <ul class="footer__link__list">
+      <li class="footer__link__item">
+        <a href="" class="link footer__links">about us</a>
+      </li>
+      <li class="footer__link__item">
+        <a href="" class="link footer__links">services</a>
+      </li>
+      <li class="footer__link__item">
+        <a href="" class="link footer__links">our works</a>
+      </li>
+      <li class="footer__link__item">
+        <a href="" class="link footer__links">faq</a>
+      </li>
+    </ul>
+  </div>
+  <img src="./images/logo-footer-mob.svg" class="footer__logo" alt="logo" >
 </footer>
 
 <div class="backdrop is-hidden">
