update svg for form talk

--- a/index.html
+++ b/index.html
@@ -523,9 +523,9 @@
           <h2 class="solve__text pure-white ">let’s discuss the project</h2>
           <div class="form__container">
             <input type="text" name="quoteName" placeholder="Your Name" required  class=" quote__input form-text pure-white"/>
-            <img src="./images/user.svg" alt="user icon" class="input__user-svg">
+            <img src="./images/user.svg" alt="user icon" class="input__form__user">
             <input type="tel" name="quoteTel" placeholder="Phone" required  class="quote__input form-text pure-white"/>
-            <img src="./images/phone.svg" alt="phone ico" class="input__phone-svg">
+            <img src="./images/phone.svg" alt="phone ico" class="input__form__phone">
             <textarea name="message" placeholder="Write your message" required class="quote__textarea form-text pure-white"></textarea>
           </div>
 
