--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       <li class="list questions__item">
         <div class="questions__block">
           <img src="./images/point-list.svg" alt="point for list" width="24" height="24">
-          <p class="subtitle__article questions__article-text">Can I text you instead of calling?</p>
+          <p class="subtitle__article questions__article-text">How soon can you start?</p>
          <button type="button" class="question__button-plus"> 
              <img src="./images/icon-plus.svg" alt="icon plus" class="questions__icon-plus">
          </button>
@@ -489,7 +489,7 @@
       <li class="list questions__item">
         <div class="questions__block">
           <img src="./images/point-list.svg" alt="point for list" width="24" height="24">
-          <p class="subtitle__article questions__article-text">Do you offer free estimates?</p>
+          <p class="subtitle__article questions__article-text">Can you help with small repairs, too?</p>
          <button type="button"  class="question__button-plus"> 
              <img src="./images/icon-plus.svg" alt="icon plus" class="questions__icon-plus">
          </button>
@@ -513,7 +513,7 @@
 <section class="container__white talk__container">
   <div class="talk__text-container">
     <h2 class="subtitle pure-white">Ready to Talk About Your Project?</h2>
-    <article class="text talk__text">Send me a quick message and I’ll get back to you soon.No pressure — just honest answers and ideas</article>
+    <article class="text talk__text">Send me a quick message and I’ll get back to you soon. No pressure — just honest answers and ideas</article>
     <p class="solve__text pure-white">312-536-1007</p>
     
   </div>
@@ -540,7 +540,8 @@
     <div class="footer__container__second">
       <div class="footer__text-container">
         <h3 class="footer__subtitle">Discuss the project:</h3>
-        <article class="footer__article">312-536-1007</article>
+        <!-- <article class="footer__article">312-536-1007</article> -->
+         <a href="tel:3125361007" class="link footer__article">312-536-1007</a>
       </div>
       <div class="footer__text-container">
         <h3 class="footer__subtitle">our location</h3>
@@ -550,7 +551,7 @@
     
     <div class="footer__follower__container">
      <h3 class="footer__subtitle">Follow:</h3>
-     <a href="" class="link footer__instagram">INSTAGRAM</a>
+     <a href="https://www.instagram.com/zhurakiinc/" class="link footer__instagram">INSTAGRAM</a>
     </div>
 
   </div>
@@ -570,6 +571,10 @@
       </li>
     </ul>
   </div>
+  <!-- <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83673.77354722226!2d-87.8564108802135!3d41.978666596119126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fcc06f037f881%3A0xb90d7e0e7fbea410!2s4935%20N%20Menard%20Ave!5e0!3m2!1suk!2sua!4v1748963877466!5m2!1suk!2sua"
+    width="1400" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"></iframe> -->
   <img src="./images/logo-footer-mob.svg" class="footer__logo" alt="logo" >
 </footer>
 
@@ -634,9 +639,6 @@
 <script type="module" src="./js/questions.js"></script>
 <script type="module" src="./js/form-quote-submit.js"></script>
 <script type="module" src="./js/modal-quote.js"></script>
-<!-- <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script>
-  emailjs.init('7dlXe9n2RwcJ2OeO9'); // заміни на свій
-</script> -->
+
 </body>
 </html>
