--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zhuraci Remodeling | Home Renovation & Tile Installation Experts</title>
-    <meta name="description" content="Zhuraci Remodeling offers professional home renovation, tile installation, and finishing services. Reliable team, quality work, and outstanding results in every project.">
+    <title>Zhuraki Remodeling | Home Renovation & Tile Installation Experts</title>
+    <meta name="description" content="Zhuraki Remodeling offers professional home renovation, tile installation, and finishing services. Reliable team, quality work, and outstanding results in every project.">
     <meta name="keywords" content="home renovation, tile installation, remodeling services, drywall, painting, flooring, Zhuraci Remodeling">
     <link
     rel="stylesheet"
@@ -28,9 +28,15 @@
      <nav>
       <ul class="header__navigation">
         <li class="list">
-          <a href="./index.html" class="link header__text">Home</a> </li>
+          <a href="./index.html" class="link header__text header__link">Home</a> </li>
         <!-- <li class="list">
           <a href="./gallery.html" class="link header__text">Gallery</a></li> -->
+        <!-- <li class="list">
+            <a href="" class="link header__text header__link">Our services</a>
+        </li>
+        <li class="list">
+            <a href="" class="link header__text header__link">Contacts</a>
+        </li> -->
       </ul>
      </nav>
      <a href="tel:3125361007" class="link header__phone header__text" >312-536-1007</a>
@@ -41,7 +47,7 @@
 
      <button class="header__button-form header__text modal__quote-open">Get a free Quote</button>
 
-     <button class="button__menu modal-open-quote">
+     <button class="button__menu  modal-open-quote">
        <img src="./images/menu-bar.svg" alt="menu-bar" width="24" height="24">
      </button>
   </header>
@@ -631,6 +637,31 @@
     </div>
   </div>
 
+<!-- <div class="backdrop__menu-mobile is-hidden">
+  <div class="modal__menu-mobile">
+    <nav>
+      <ul class="list modal__menu-list">
+        <li class="">
+          <a href="" class="link menu__mobile-text header__link">Gallery</a>
+        </li>
+        <li class="">
+          <a href="" class="link menu__mobile-text header__link">Our services</a>
+        </li>
+        <li class="">
+          <a href="" class="link menu__mobile-text header__link">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+    <button class="button__menu_quote modal__quote-open">Get a free Quote</button>
+    <div class="footer__follower__container">
+      <h3 class="menu__mobile-subtitle">Follow:</h3>
+      <a href="https://www.instagram.com/zhurakiinc/" class="link menu__mobile-instagram">INSTAGRAM</a>
+    </div>
+  <button class="button__menu-close button__close">
+    <img src="./images/icon-close-menu.svg" alt="icon close">
+  </button>
+  </div>
+</div> -->
 
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script type="module" src="./js/swiper.js"></script>
@@ -639,6 +670,7 @@
 <script type="module" src="./js/questions.js"></script>
 <script type="module" src="./js/form-quote-submit.js"></script>
 <script type="module" src="./js/modal-quote.js"></script>
+<script type="module" src="./js/menu-mobile.js"></script>
 
 </body>
 </html>
